# chatserver

./: CMakeLists.txt  README.md
include/: public.h
include/server/: chatserver.h  chatservice.h
include/server/db/: db.h
include/server/model/: friendmodel.h  group.h  group_model.h  group_user.h  offlinemessagemodel.h  user.h  usermodel.h
include/server/redis/: redis.h
package/muduo-master/: CMakeLists.txt
package/nginx-1.12.2/objs/: Makefile  autoconf.err  ngx_auto_config.h
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/testjson/: testjson  testjson.cpp
test/testmuduo/: CMakeLists.txt  muduo_server.cpp
